<resources>
    <string name="app_name">Pikachucatcher</string>
    <string name="logo">logo</string>
    <string name="btnMap">Map</string>
    <string name="btnCatch">CATCH!</string>
    <string name="btnResults">Zoo</string>
    <string name="menuItemResults">Zoo</string>
    <string name="menuItemDescription">Description</string>
    <string name="descriptionText">
        1. Open the Map and look for places where pikachu was detected.
        2. Go to the place and look for a tag with code and NFC tag.
        3. Open "Catch!" page and insert the code or approach the NFC tag.
        4. You can find all pikachus you have caught on Zoo page.
        5. All registered players and their scores are registered on Score page.</string>
    <string name="descriptionBtnCloseText">Close</string>
    <string name="title_activity_maps">PikachuMap</string>
    <string name="menuItemScores">Scores</string>
    <string name="scoresTitleTextView">SCORES</string>
    <string name="menuItemHome">Home</string>
    <string name="resultTitleText">Pikachu Zoo</string>
    <string name="menuItemMaps">Map</string>
    <string name="hintTextPikachuId">enter pikachu id</string>
    <string name="btnCatchWithID">CATCH!</string>
    <string name="catchDescriptionText">OR APPROACH THE NFC TAG</string>
    <string name="pikachuPictureContentView">Pikachu image</string>
    <string name="imageViewNFCTag">NFC tag</string>
    <string name="insertIdDescriptionTextView"><![CDATA[ENTER PIKACHU CODE]]></string>
</resources>
