<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Activities.CatchActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10"
        android:id="@+id/pikachuIdEditText"
        android:hint="@string/hintTextPikachuId"
        android:textAlignment="center"
        android:layout_above="@+id/catchDescriptionTextView"
        android:layout_alignParentStart="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnCatchWithID"
        android:id="@+id/btnCatchWithID"
        android:layout_below="@+id/textViewIncertId"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/pikachuIdEditText"
        android:layout_marginTop="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/catchDescriptionText"
        android:id="@+id/catchDescriptionTextView"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:layout_below="@+id/btnCatchWithID"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageViewNFCTag"
        android:src="@drawable/nfc_tag"
        android:contentDescription="@string/imageViewNFCTag"
        android:adjustViewBounds="true"
        android:maxWidth="250dp"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/catchDescriptionTextView"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/insertIdDescriptionTextView"
        android:id="@+id/textViewIncertId"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />

</RelativeLayout>
